--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -65,10 +65,10 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
     - name: Update feeds
-      run: cd openwrt && ./scripts/feeds update -a
+      run: cd openwrt && ./scripts/feeds update -a && ./scripts/feeds update -a && ./scripts/feeds update -a && ./scripts/feeds update -a
 
     - name: Install feeds
-      run: cd openwrt && ./scripts/feeds install -a
+      run: cd openwrt && ./scripts/feeds install -a && ./scripts/feeds install -a && ./scripts/feeds install -a && ./scripts/feeds update -a
 
     - name: Load custom configuration
       run: |
@@ -83,6 +83,8 @@ jobs:
       run: |
         cd openwrt
         make defconfig
+        make download -j8
+        make download -j8
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
